syntax = "proto3";

package messages;

message MessagesMessage {
  message NestedMessage {
    int32 a = 1;
    MessagesMessage corecursive = 2;
  }

  string id = 1;
  NestedMessage optional_nested_message = 2;
  ForeignMessage optional_foreign_message = 3;
}

message ForeignMessage {
  int32 c = 1;
}